@@ -174,6 +174,12 @@ Updates:
 	Added About option (In Options menu @ top bar)
 	Re-newed messages :D
 
+==Beta13==
+	ADB FE: Delete bug fixed
+	Batch Theme: New color selector, Color Insertor, PIL theming
+	Resize: PIL Resizing
+	Batch Rename (for themers); search pattern, base dir, add to beginning/end/ext
+	Install Utils: [is now Install Image Tools]: Install ImageMagick | Python Image Library
 	
 
 Feature requests are always welcome :)
